Revision history for Perl extension Statistics::Descriptive.

3.0201      October 14, 2010
    - Add some documentation clarifying the 0th percentile return, as it
    returns undef() for representing -inf:
        - Fix https://rt.cpan.org/Ticket/Display.html?id=62055
        - Thanks to Dave Breimann for reporting it.

3.0200      June 18, 2010
    - Added skewness and kurtosis
        - https://rt.cpan.org/Ticket/Display.html?id=58187
        - Thanks to Shawn Laffan.
    - Removed the Changes / Revision log from the .pm file. 

3.0102      June 15, 2010
    - Add the $VERSION variable to Statistics::Descriptive::Sparse and
    Statistics::Descriptive::Full. This was done to silence the CPAN indexer.

3.0101      June 15, 2010
    - Moved the trimmed_mean caching test (that used the Benchmark.pm module)
    to rejects/descr.t , because it kept failing.

3.0100      July 20, 2009
    - Added the quantile method - thanks to Djibril Ousmanou (DJIBEL).
        - https://rt.cpan.org/Ticket/Display.html?id=47948

3.0000      May 29, 2009
    - Added tests (for ->count, ->sum, ->sumsq, ->min, ->max)
    - Localized the scope of $stat and other variables in t/descr.t
    - Got rid of AUTOLOAD in favour of individual accessors.
    - Converted many direct member accesses to the accessors.
    - Added ->frequency_distribution_ref() which deprecates
      frequency_distribution().
    - Some refactoring of the lib/Statistics/Descriptive.pm module
    (without breaking the documented API).

2.9   May 13, 2009

    - Fixed bug https://rt.cpan.org/Public/Bug/Display.html?id=46026 :
        - standard_deviation failing due to a variance that got evaluated
        to 0 due to rounding errors.
    - Kwalitee : added a LICENSE section to the POD.
    - Kwalitee (CPANTS) : added an examples/ directory with a script.

2.8   May 09, 2009

    - Enabled "./Build runtest" and "./Build distruntest" (using Test::Run)
    in the distribution.
