@@ -9,6 +9,7 @@ META.yml
 README
 rejects/descr.t
 t/00-load.t
+tag-release.pl
 t/descr.t
 t/freq_distribution-1-rt-34999.t
 t/pod-coverage.t
